Remove deprecated links

--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
 
 	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<link href="//gauge.org/assets/stylesheets/site.css" rel="stylesheet" />
+		<link type="text/css" href="//gauge.org/assets/stylesheets/site.css" rel="stylesheet" />
 		<link rel="shortcut icon" type="image/png" href="https://gauge.org/assets/images/favicons/favicon.ico" />
 		<title>Gauge Downloads</title>
 	</head>
@@ -19,7 +17,7 @@
 		This site is used by Gauge to get download metadata and check updates for plugins, templates and
 		Gauge executable.
 		</p>
-		</p>
+    <p>
 		These URLs are used within Gauge for downloading updates
 		</p>
 		<hr/>
@@ -29,16 +27,6 @@
 		<code>https://downloads.gauge.org/plugin/{plugin_name}</code>
 		gives the metadata for the plugin.
 		</p>
-		<hr/>
-		<a href="https://downloads.gauge.org/templates">https://downloads.gauge.org/templates</a>
-		<p>
-		Used by Gauge to get the metadata of templates. It returns the metada in JSON format
-		<code>https://downloads.gauge.org/templates/{template.zip}</code> downloads the sample Gauge
-		project for given template in zip format.
-		</p>
-		<hr/>
-		<a href="https://downloads.gauge.org/gauge">https://downloads.gauge.org/gauge</a>
-		<p>Used by Gauge to get the latest release info for Gauge.</p>
 		<hr/>
 		<a href="https://downloads.gauge.org/stable">https://downloads.gauge.org/stable</a>
 		<p>
